<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.example.andy.myapplication.MainActivity">

    <TextView
        android:onClick="tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeFenfa"/>
    <Button
        android:id="@+id/btn_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/openNotifi"/>
    <Button
        android:id="@+id/btn_cancle_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancle"/>
    <Button
        android:id="@+id/send_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendBroadCast"/>

    <Button
        android:id="@+id/start_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startService"/>
    <Button
        android:id="@+id/stop_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stopService"/>
    <Button
        android:id="@+id/service_function"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serviceFunction"/>

</LinearLayout>
